--- a/css/main_style.css
+++ b/css/main_style.css
@@ -9,6 +9,29 @@ body {
     background-color: #000;
 }
 
+#title {
+    color: #333;
+    position: fixed;
+    top: 5%;
+    left: 2%;
+}
+
+.links {
+    padding-left: 2%;
+    padding-top: 8%;
+}
+
+.links a {
+    color: #555;
+    font-size: 1.2em;
+    display: block;
+    /*font-weight: bold;*/
+}
+
+.links a:hover {
+    text-decoration: none;
+}
+
 #main-header {
     margin-top: 0;
     padding-top: 0;
